PHP版トップの画像サイズを調整、各種ページのリンク追加、表示不具合修正

--- a/webapp/static/css/bootstrap.css
+++ b/webapp/static/css/bootstrap.css
@@ -1065,6 +1065,10 @@ th {
 .glyphicon-menu-up:before {
   content: "\e260";
 }
+.thumbnail-img {
+  max-width: 100px;
+  max-height: 100px;
+}
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
